--- a/workflow_fargate.yaml
+++ b/workflow_fargate.yaml
@@ -67,46 +67,53 @@ jobs:
       test: ./${{ inputs.test }}
     secrets: inherit
 
-  terraform-plan:
-    if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging') }}
-    needs: [ test ]
-    uses: ./.github/workflows/_terraform-plan.yaml
+  sonar-qube:
+    if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
+    uses: ./.github/workflows/_sonar_qube.yaml
     with:
-      path-terraform: ${{ inputs.path-terraform }}
-      staging-aws: ${{ inputs.staging-aws }}
-      production-aws: ${{ inputs.production-aws }}
+      project: ./src/${{ inputs.project }}
     secrets: inherit
 
-  terraform-apply:
-    if: ${{ github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging') }}
-    uses: ./.github/workflows/_terraform-apply.yaml
-    with:
-      path-terraform: ${{ inputs.path-terraform }}
-      staging-aws: ${{ inputs.staging-aws }}
-      production-aws: ${{ inputs.production-aws }}
-      destroy: ${{ inputs.destroy }}
-    secrets: inherit
+  # terraform-plan:
+  #   if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging') }}
+  #   needs: [ test ]
+  #   uses: ./.github/workflows/_terraform-plan.yaml
+  #   with:
+  #     path-terraform: ${{ inputs.path-terraform }}
+  #     staging-aws: ${{ inputs.staging-aws }}
+  #     production-aws: ${{ inputs.production-aws }}
+  #   secrets: inherit
 
-  deploy:
-    if: ${{ inputs.destroy == false && (github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging')) }}
-    needs: [ terraform-apply]
-    uses: ./.github/workflows/_deploy.yaml
-    with:
-      ecr-repository-name: ${{ needs.terraform-apply.outputs.ecr-repository-name }}
-      ecs-service-name: ${{ needs.terraform-apply.outputs.ecs-service-name }}
-      cluster-name: ${{ inputs.product }}
-      container-definition-json: ${{ needs.terraform-apply.outputs.container-definition-json }}
-      container-name: ${{ needs.terraform-apply.outputs.container-name }}
-      dockerfile-path: ./src/${{ inputs.project }}
-      staging-aws: ${{ inputs.staging-aws }}
-      production-aws: ${{ inputs.production-aws }}
-      product: ${{ inputs.product }}
-      microservice: ${{ inputs.microservice }}
-      hasEmail: ${{ inputs.hasEmail }}
-    secrets: inherit
+  # terraform-apply:
+  #   if: ${{ github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging') }}
+  #   uses: ./.github/workflows/_terraform-apply.yaml
+  #   with:
+  #     path-terraform: ${{ inputs.path-terraform }}
+  #     staging-aws: ${{ inputs.staging-aws }}
+  #     production-aws: ${{ inputs.production-aws }}
+  #     destroy: ${{ inputs.destroy }}
+  #   secrets: inherit
+
+  # deploy:
+  #   if: ${{ inputs.destroy == false && (github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging')) }}
+  #   needs: [ terraform-apply]
+  #   uses: ./.github/workflows/_deploy.yaml
+  #   with:
+  #     ecr-repository-name: ${{ needs.terraform-apply.outputs.ecr-repository-name }}
+  #     ecs-service-name: ${{ needs.terraform-apply.outputs.ecs-service-name }}
+  #     cluster-name: ${{ inputs.product }}
+  #     container-definition-json: ${{ needs.terraform-apply.outputs.container-definition-json }}
+  #     container-name: ${{ needs.terraform-apply.outputs.container-name }}
+  #     dockerfile-path: ./src/${{ inputs.project }}
+  #     staging-aws: ${{ inputs.staging-aws }}
+  #     production-aws: ${{ inputs.production-aws }}
+  #     product: ${{ inputs.product }}
+  #     microservice: ${{ inputs.microservice }}
+  #     hasEmail: ${{ inputs.hasEmail }}
+  #   secrets: inherit
 
   dependabot-reviewer:
     uses: ./.github/workflows/_dependabot_reviewer.yaml
     
-  request-manual-approval:
-    uses: ./.github/workflows/_manual_approval.yaml
+  # request-manual-approval:
+  #   uses: ./.github/workflows/_manual_approval.yaml
