--- a/workflow_fargate.yaml
+++ b/workflow_fargate.yaml
@@ -3,16 +3,24 @@ name: Workflow Fargate
 on:
   workflow_call:
     inputs:
-      path-terraform:
-        description: 'The path terraform passed from the caller workflow'
+      staging-aws:
+        description: 'The staging acocunt id aws passed from the caller workflow'
+        required: true
+        type: string
+      production-aws:
+        description: 'The production acocunt id aws passed from the caller workflow'
         required: true
         type: string
       product:
         description: 'The name of product passed from the caller workflow'
         required: true
         type: string
-      microservice:
-        description: 'The name of microservice passed from the caller workflow'
+      service-name:
+        description: 'The name of service passed from the caller workflow'
+        required: true
+        type: string
+      path:
+        description: 'The project path passed from the caller workflow'
         required: true
         type: string
       project:
@@ -21,14 +29,6 @@ on:
         type: string
       test:
         description: 'The test path passed from the caller workflow'
-        required: true
-        type: string
-      staging-aws:
-        description: 'The staging acocunt id aws passed from the caller workflow'
-        required: true
-        type: string
-      production-aws:
-        description: 'The production acocunt id aws passed from the caller workflow'
         required: true
         type: string
       destroy:
@@ -43,7 +43,13 @@ on:
       packages-token:
         description: 'The packages token passed from the caller workflow'
         required: true
-
+      app-id:
+        description: 'The app id passed from the caller workflow'
+        required: true
+      app-private-key:
+        description: 'The app private key passed from the caller workflow'
+        required: true
+        
 concurrency:
  group: ${{ github.workflow }}-${{ github.ref }}
  cancel-in-progress: true
@@ -53,9 +59,14 @@ jobs:
     if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
     uses: ./.github/workflows/_build.yaml
     with:
-      project: ./src/${{ inputs.project }}
-    secrets: inherit
-
+      project: ${{ inputs.path }}/${{ inputs.project }}
+    secrets: inherit  
+  sonar-qube:
+      if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
+      uses: ./.github/workflows/_sonar_qube.yaml
+      with:
+        project: ./src/${{ inputs.project }}
+      secrets: inherit
   test:
     if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
     needs: [ build ]
@@ -64,53 +75,78 @@ jobs:
       test: ./${{ inputs.test }}
     secrets: inherit
 
-  sonar-qube:
-    if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
-    uses: ./.github/workflows/_sonar_qube.yaml
-    with:
-      project: ./src/${{ inputs.project }}
-    secrets: inherit
-
   # terraform-plan:
-  #   if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging') }}
   #   needs: [ test ]
+  #   if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
   #   uses: ./.github/workflows/_terraform-plan.yaml
   #   with:
-  #     path-terraform: ${{ inputs.path-terraform }}
   #     staging-aws: ${{ inputs.staging-aws }}
+  #     service-name: ${{ inputs.service-name }}
   #     production-aws: ${{ inputs.production-aws }}
   #   secrets: inherit
 
-  # terraform-apply:
-  #   if: ${{ github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging') }}
+  # request-manual-approval-terraform:
+  #   if: ${{ github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production') }}
+  #   uses: ./.github/workflows/_manual_approval.yaml
+  #   with:
+  #     type-deploy: "TERRAFORM"
+  #   secrets: inherit
+
+  # request-manual-approval-service:
+  #   if: ${{ github.event.pull_request.merged && (inputs.destroy == false && (github.event.pull_request.base.ref == 'production')) }}
+  #   uses: ./.github/workflows/_manual_approval.yaml
+  #   with:
+  #     type-deploy: "SERVICE"
+  #   secrets: inherit
+
+  # terraform-apply-staging:
+  #   if: ${{ github.event.pull_request.merged && (github.event.pull_request.base.ref == 'staging') }}
   #   uses: ./.github/workflows/_terraform-apply.yaml
   #   with:
-  #     path-terraform: ${{ inputs.path-terraform }}
   #     staging-aws: ${{ inputs.staging-aws }}
   #     production-aws: ${{ inputs.production-aws }}
+  #     service-name: ${{ inputs.service-name }}
+  #     destroy: ${{ inputs.destroy }}
+  #   secrets: inherit
+
+  # deploy-staging:
+  #   needs: [ terraform-apply-staging ]
+  #   if: ${{ inputs.destroy == false && (github.event.pull_request.merged && (github.event.pull_request.base.ref == 'staging')) }}
+  #   uses: ./.github/workflows/_deploy.yaml
+  #   with:
+  #     staging-aws: ${{ inputs.staging-aws }}
+  #     production-aws: ${{ inputs.production-aws }}
+  #     path: ${{ inputs.path }}
+  #     product: ${{ inputs.product }}
+  #     project: ${{ inputs.project }}
+  #     service-name: ${{ inputs.service-name }}
+  #     hasEmail: ${{ inputs.hasEmail }}
+  #   secrets: inherit
+
+  # terraform-apply:
+  #   needs: [ request-manual-approval-terraform ]
+  #   if: ${{ github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production') }}
+  #   uses: ./.github/workflows/_terraform-apply.yaml
+  #   with:
+  #     staging-aws: ${{ inputs.staging-aws }}
+  #     production-aws: ${{ inputs.production-aws }}
+  #     service-name: ${{ inputs.service-name }}
   #     destroy: ${{ inputs.destroy }}
   #   secrets: inherit
 
   # deploy:
-  #   if: ${{ inputs.destroy == false && (github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production' || github.event.pull_request.base.ref == 'staging')) }}
-  #   needs: [ terraform-apply]
+  #   needs: [ request-manual-approval-service ]
+  #   if: ${{ inputs.destroy == false && (github.event.pull_request.merged && (github.event.pull_request.base.ref == 'production')) }}
   #   uses: ./.github/workflows/_deploy.yaml
   #   with:
-  #     ecr-repository-name: ${{ needs.terraform-apply.outputs.ecr-repository-name }}
-  #     ecs-service-name: ${{ needs.terraform-apply.outputs.ecs-service-name }}
-  #     cluster-name: ${{ inputs.product }}
-  #     container-definition-json: ${{ needs.terraform-apply.outputs.container-definition-json }}
-  #     container-name: ${{ needs.terraform-apply.outputs.container-name }}
-  #     dockerfile-path: ./src/${{ inputs.project }}
   #     staging-aws: ${{ inputs.staging-aws }}
   #     production-aws: ${{ inputs.production-aws }}
   #     product: ${{ inputs.product }}
-  #     microservice: ${{ inputs.microservice }}
+  #     project: ${{ inputs.project }}
+  #     path: ${{ inputs.path }}
+  #     service-name: ${{ inputs.service-name }}
   #     hasEmail: ${{ inputs.hasEmail }}
   #   secrets: inherit
 
   dependabot-reviewer:
     uses: ./.github/workflows/_dependabot_reviewer.yaml
-    
-  # request-manual-approval:
-  #   uses: ./.github/workflows/_manual_approval.yaml
