--- a/.github/workflows/_test.yaml
+++ b/.github/workflows/_test.yaml
@@ -7,10 +7,9 @@ on:
         description: 'The *csproj test path passed from the caller workflow'
         required: true
         type: string
-        
-env:
-  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
+    secrets:  
+      CODECOV_TOKEN:
+        required: true
 jobs:
   test:
     name: Test
