--- a/.github/workflows/workflow_fargate.yaml
+++ b/.github/workflows/workflow_fargate.yaml
@@ -43,6 +43,9 @@ on:
       packages-token:
         description: 'The packages token passed from the caller workflow'
         required: true
+      SONAR_TOKEN:
+        description: 'The Sonar Qube token passed from the caller workflow'
+        required: true
       CODECOV_TOKEN:
         description: 'The code cov token passed from the caller workflow'
         required: true
@@ -76,6 +79,13 @@ jobs:
     uses: ./.github/workflows/_test.yaml
     with:
       test: ./${{ inputs.test }}
+    secrets: inherit
+  sonar_qube:
+    if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
+    needs: [ build ]
+    uses: ./.github/workflows/_sonar_qube.yaml
+    with:
+      project: ${{ inputs.path }}/${{ inputs.project }}
     secrets: inherit
 
   # terraform-plan:
