--- a/.github/workflows/_deploy.yaml
+++ b/.github/workflows/_deploy.yaml
@@ -3,18 +3,6 @@ name: _Deploy
 on:
   workflow_call:
     inputs:
-      staging-aws:
-        description: 'The staging acocunt id aws passed from the caller workflow'
-        required: true
-        type: string
-      production-aws:
-        description: 'The production acocunt id aws passed from the caller workflow'
-        required: true
-        type: string
-      product:
-        description: 'The name of product passed from the caller workflow'
-        required: true
-        type: string
       path:
         description: 'The project path passed from the caller workflow'
         required: true
@@ -23,143 +11,42 @@ on:
         description: 'The project passed from the caller workflow'
         required: true
         type: string
-      service-name:
-        description: 'The name of service passed from the caller workflow'
-        required: true
-        type: string
-      hasEmail:
-        description: "The boolean hasEmail passed from the caller workflow"
-        type: boolean
-        default: false
     secrets:
-      packages-token:
-        description: 'The packages token passed from the caller workflow'
+      AZURE_CREDENTIALS:
+        description: 'The azure credentials passed from the caller workflow'
         required: true
-
-env:
-  AWS_REGION: us-east-1
-  NUGET_USER: twila-digital
-  NUGET_PACKAGES_TOKEN: ${{ secrets.packages-token }}
 
 jobs:
   deploy:
-    name: "Deploy"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
-    permissions:
-      id-token: write
-      contents: read
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
+        working-directory: ./terraform
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      
-      - name: Set role
-        run: |
-          if [ "${BRANCH}" == "staging" ]; then
-            ROLE_TO_ASSUME="arn:aws:iam::${{ inputs.staging-aws }}:role/Github-Admin"
-          elif [ "${BRANCH}" == "production" ]; then
-            ROLE_TO_ASSUME="arn:aws:iam::${{ inputs.production-aws }}:role/Github-Admin"
-          fi
-          echo "ROLE_TO_ASSUME=$ROLE_TO_ASSUME" >> $GITHUB_ENV
-        env:
-          BRANCH: ${{ github.event.pull_request.base.ref }}
+      - name: Checkout código
+        uses: actions/checkout@v3
 
-      - name: Configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Login no Azure
+        uses: azure/login@v1
         with:
-          role-to-assume: ${{ env.ROLE_TO_ASSUME }}
-          role-session-name: GitHub_to_AWS_via_FederatedOIDC
-          aws-region: ${{ env.AWS_REGION }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+      - name: Login no Azure Container Registry (ACR)
+        run: az acr login --name acrgalilearn
 
-      - name: Add appsettings project as submodule
-        env:
-          PRODUCT: ${{ inputs.product }}
-        run: |
-          git config --global credential.helper store
-          git submodule add https://${{ secrets.packages-token }}@github.com/Twila-Digital/twila-appsettings.git parameters
-
-      - name: Set appsettings.json informations
-        id: appsettings-info
-        env:
-          SERVICE_NAME: ${{ inputs.service-name }}
-          BRANCH: ${{ github.event.pull_request.base.ref }}
-          PRODUCT: ${{ inputs.product }}
-        run: |
-          mv -f parameters/${{env.PRODUCT}}/${{env.SERVICE_NAME}}/${{env.BRANCH}}/appsettings.json ${{ inputs.path }}/${{ inputs.project }}
-          
-      - name: Add email templates as submodule
-        if: ${{ inputs.hasEmail == true }}
-        env:
-          BRANCH: ${{ github.event.pull_request.base.ref }}
-        run: |
-          git config --global credential.helper store
-          git submodule add -b ${{env.BRANCH}} https://${{ secrets.packages-token }}@github.com/Twila-Digital/twila-templates-emails.git emails
-          git submodule update --init --remote
-          
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
+      - name: Build e Push da imagem Docker para o ACR
         env:
           DOCKERFILE_PATH: ${{ inputs.path }}/${{ inputs.project }}/Dockerfile
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ github.event.pull_request.base.ref }}-${{ inputs.service-name }}-ecr
-          IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -f ${{env.DOCKERFILE_PATH}} \
-            --build-arg NUGET_USER=$NUGET_USER \
-            --build-arg NUGET_PACKAGES_TOKEN=$NUGET_PACKAGES_TOKEN \
-            --force-rm -t ${{env.ECR_REGISTRY}}/${{env.ECR_REPOSITORY}}:${{env.IMAGE_TAG}} .
+          docker build -f ${{env.DOCKERFILE_PATH}} -t acrgalilearn.azurecr.io/galilearn-api:latest .
+          docker push acrgalilearn.azurecr.io/galilearn-api:latest
 
-          docker push ${{env.ECR_REGISTRY}}/${{env.ECR_REPOSITORY}}:${{env.IMAGE_TAG}}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
 
-      - name: Download task definition
-        env:
-          SERVICE_NAME: ${{ inputs.service-name }}
-          BRANCH: ${{ github.event.pull_request.base.ref }}
-        run: |
-          aws ecs describe-task-definition --task-definition ${{env.BRANCH}}-${{env.SERVICE_NAME}} --query taskDefinition | jq -r 'del(
-            .taskDefinitionArn,
-            .requiresAttributes,
-            .compatibilities,
-            .revision,
-            .status,
-            .registeredAt,
-            .registeredBy
-          )' > task-definition.json
-          ls -la
-          cat task-definition.json
+      - name: Terraform Init
+        run: terraform init
 
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          SERVICE_NAME: ${{ inputs.service-name }}
-          BRANCH: ${{ github.event.pull_request.base.ref }}
-          ECR_REPOSITORY: ${{ github.event.pull_request.base.ref }}-${{ inputs.service-name }}-ecr
-          IMAGE_TAG: ${{ github.sha }}
-        with:
-          task-definition: task-definition.json
-          container-name: ${{env.BRANCH}}-${{env.SERVICE_NAME}}
-          image: ${{env.ECR_REGISTRY}}/${{env.ECR_REPOSITORY}}:${{env.IMAGE_TAG}}
-      
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
-        env:
-          SERVICE_NAME: ${{ inputs.service-name }}
-          CLUSTER_NAME: ${{ inputs.product }}
-          BRANCH: ${{ github.event.pull_request.base.ref }}
-        with:
-            task-definition: ${{ steps.task-def.outputs.task-definition }}
-            service: ${{env.BRANCH}}-${{env.SERVICE_NAME}}
-            cluster: ${{env.BRANCH}}-${{env.CLUSTER_NAME}}
-            wait-for-service-stability: true
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
