--- a/.github/workflows/workflow_fargate.yaml
+++ b/.github/workflows/workflow_fargate.yaml
@@ -59,7 +59,7 @@ jobs:
     secrets: inherit
 
   deploy:
-    if: ${{ inputs.destroy == false && (github.event.pull_request.merged && (github.event.pull_request.base.ref == 'main')) }}
+    if: ${{ (github.event.pull_request.merged && (github.event.pull_request.base.ref == 'main')) }}
     uses: ./.github/workflows/_deploy.yaml
     with:
       project: ${{ inputs.project }}
