--- a/.github/workflows/_deploy.yaml
+++ b/.github/workflows/_deploy.yaml
@@ -47,6 +47,10 @@ jobs:
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform
+        
+      - name: Importar Resource Group (ignorar falha se já existir)
+        run: |
+          terraform import azurerm_resource_group.rg /subscriptions/001b430d-5995-44e9-aa06-0b25ccf361b0/resourceGroups/rg-galilearn || true
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
